--- a/fonts/Open-Science-Icons-Regular.ufo/glyphs/contents.plist
+++ b/fonts/Open-Science-Icons-Regular.ufo/glyphs/contents.plist
@@ -24,19 +24,45 @@
 	<string>uniE_908.glif</string>
 	<key>uniE909</key>
 	<string>uniE_909.glif</string>
-	<key>uniE90A</key>
-	<string>uniE_90A_.glif</string>
-	<key>uniE90B</key>
-	<string>uniE_90B_.glif</string>
-	<key>uniE90C</key>
-	<string>uniE_90C_.glif</string>
-	<key>uniE90D</key>
-	<string>uniE_90D_.glif</string>
-	<key>uniE90E</key>
-	<string>uniE_90E_.glif</string>
-	<key>uniE90F</key>
-	<string>uniE_90F_.glif</string>
-	<key>uniE910</key>
-	<string>uniE_910.glif</string>
+	<key>uniE950</key>
+	<string>uniE_950.glif</string>
+	<key>uniE951</key>
+	<string>uniE_951.glif</string>
+	<key>uniE952</key>
+	<string>uniE_952.glif</string>
+	<key>uniE953</key>
+	<string>uniE_953.glif</string>
+	<key>uniE954</key>
+	<string>uniE_954.glif</string>
+	<key>uniE955</key>
+	<string>uniE_955.glif</string>
+	<key>uniE956</key>
+	<string>uniE_956.glif</string>
+	<key>uniE957</key>
+	<string>uniE_957.glif</string>
+	<key>uniE958</key>
+	<string>uniE_958.glif</string>
+	<key>uniE959</key>
+	<string>uniE_959.glif</string>
+	<key>uniE9A0</key>
+	<string>uniE_9A_0.glif</string>
+	<key>uniE9A1</key>
+	<string>uniE_9A_1.glif</string>
+	<key>uniE9A2</key>
+	<string>uniE_9A_2.glif</string>
+	<key>uniE9A3</key>
+	<string>uniE_9A_3.glif</string>
+	<key>uniE9A4</key>
+	<string>uniE_9A_4.glif</string>
+	<key>uniE9A5</key>
+	<string>uniE_9A_5.glif</string>
+	<key>uniE9A6</key>
+	<string>uniE_9A_6.glif</string>
+	<key>uniE9A7</key>
+	<string>uniE_9A_7.glif</string>
+	<key>uniE9A8</key>
+	<string>uniE_9A_8.glif</string>
+	<key>uniE9A9</key>
+	<string>uniE_9A_9.glif</string>
 </dict>
 </plist>
