--- a/fonts/Open-Science-Icons-Regular.ufo/lib.plist
+++ b/fonts/Open-Science-Icons-Regular.ufo/lib.plist
@@ -23,13 +23,26 @@
 		<string>uniE907</string>
 		<string>uniE908</string>
 		<string>uniE909</string>
-		<string>uniE90A</string>
-		<string>uniE90B</string>
-		<string>uniE90C</string>
-		<string>uniE90D</string>
-		<string>uniE90E</string>
-		<string>uniE90F</string>
-		<string>uniE910</string>
+		<string>uniE950</string>
+		<string>uniE951</string>
+		<string>uniE952</string>
+		<string>uniE953</string>
+		<string>uniE954</string>
+		<string>uniE955</string>
+		<string>uniE956</string>
+		<string>uniE957</string>
+		<string>uniE958</string>
+		<string>uniE959</string>
+		<string>uniE9A0</string>
+		<string>uniE9A1</string>
+		<string>uniE9A2</string>
+		<string>uniE9A3</string>
+		<string>uniE9A4</string>
+		<string>uniE9A5</string>
+		<string>uniE9A6</string>
+		<string>uniE9A7</string>
+		<string>uniE9A8</string>
+		<string>uniE9A9</string>
 	</array>
 </dict>
 </plist>
